[package]
name = "fnlog"
version = "0.1.2"
authors = ["whichxjy <whichxjy@gmail.com>"]
license = "MIT"
description = "Logging with function names"
documentation = "https://docs.rs/fnlog/"
repository = "https://github.com/whichxjy/fnlog/"
readme = "README.md"
edition = "2018"

[dependencies]
log = "0.4.11"
stdext = "0.2.1"

[dev-dependencies]
env_logger = "0.8.2"
